--- a/HW1.1
+++ b/HW1.1
@@ -15,7 +15,7 @@ int main()
     else if (a == 0){
         cout<< -1 * (c/b);
     }
-    else if (b*b - 4*a*c == 0){
+    else if (b*b - 4*a*c < 0){
         cout<< "no answer";
     }
     else{
