--- a/HW1.2
+++ b/HW1.2
@@ -20,7 +20,7 @@ int main()
             cout<< 70*350 + 30*500 + (a - 100)*770;
         }
         else if (a  > 450){
-            cout<< 70*350 + 30*500 + (a - 450)*840;
+            cout<< 70*350 + 30*500 + 350*770 + (a - 450)*840;
         }
     }
 
